fix: update swagger documentation
